# CodegenWrappersLLVM

./: .gitignore  CMakeLists.txt  GeneratedCode.txt  README.md  config.txt  config2.txt  config_C.txt  listClasses.txt
CodeForGenerating/: main.h  main.ll
CodeForGenerating/include/: support.h
Program/: CMakeLists.txt  config.txt
Program/src/: Block.cpp  Block.h  CMakeLists.txt  ConfigWalker.cpp  ConfigWalker.h  MacroSubstitution.cpp  MacroSubstitution.h  main.cpp
Program/src/ClangLLVMIRTranslator/: ClangLLVMIRTranslator.cpp  ClangLLVMIRTranslator.h
Program/src/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
Program/tests/: test.cpp
llvm-ir-exploration/: CMakeLists.txt  main.h  main.ll
llvm-ir-exploration/.cmake/api/v1/reply/: cache-v2-50a6ee9e23ad4d77094d.json  cmakeFiles-v1-a0cafb842c3f40eb0b58.json  codemodel-v2-7377da541ccc10cb4a6d.json  index-2022-03-15T21-54-26-0306.json  target-llvm_ir_exploration-Debug-880f939d326b120b931d.json
src/: CMakeLists.txt  main.cpp  utils.h
src/CodeGenerator/: CodeGenerator.cpp  CodeGenerator.h
src/ConfigWalker/: Block.cpp  Block.h  ConfigFormatException.cpp  ConfigFormatException.h  ConfigWalker.cpp  ConfigWalker.h
src/FileMapper/: FileMapper.cpp  FileMapper.h
src/Translator/: ClangLLVMIRTranslator.cpp  ClangLLVMIRTranslator.h  Translator.h  TranslatorException.cpp  TranslatorException.h
